# pawrly

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml  console.yml  release.yml
apps/console/: .gitignore  README.md  buf.gen.yaml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/landing/: .gitignore  package-lock.json  package.json  vercel.json
clients/python/: .gitignore  README.md  pyproject.toml
clients/python/scripts/: generate.sh
clients/python/src/pawrly/: __init__.py  client.py  errors.py  query.py  result.py
clients/python/src/pawrly/transports/: convert.py  grpc.py  local.py  rest.py
clients/python/test/: grpc_smoke.py  local_smoke.py  mut_smoke.py  read_smoke.py  run-grpc-smoke.sh  run-mut-smoke.sh  run-read-smoke.sh  run-smoke.sh  smoke.py
clients/typescript/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
crates/pawrly-cli/: Cargo.toml
crates/pawrly-cli/src/: engine.rs  main.rs
crates/pawrly-cli/src/commands/: cache.rs  check.rs  config.rs  console.rs  explain.rs  format.rs  function.rs  init.rs  materialize.rs  mcp_http.rs  mcp_stdio.rs  mod.rs  schema.rs  semantic.rs  serve.rs  source.rs  sql.rs  status.rs  stop.rs  uninstall.rs  update.rs  validate.rs  variables.rs
crates/pawrly-cli/tests/: cache_cli.rs  check_cli.rs  config_cli.rs  daemon.rs  examples_smoke.rs  mcp_http.rs  mcp_stdio.rs  new_commands.rs  source_cli.rs  sql_duckdb.rs  sql_file_source.rs
crates/pawrly-cli/tests/fixtures/: customers.csv  events.json
crates/pawrly-client/: Cargo.toml
crates/pawrly-client/src/: lib.rs  remote.rs  rest_client.rs  transport.rs
crates/pawrly-client/tests/: transports.rs
crates/pawrly-config/: Cargo.toml
crates/pawrly-config/src/: assemble.rs  defaults.rs  interpolate.rs  lib.rs  loader.rs  observability.rs  schema.rs  secrets.rs  types.rs  validator.rs  variables.rs
crates/pawrly-config/tests/: end_to_end.rs  multi_file.rs  variables.rs
crates/pawrly-core/: Cargo.toml
crates/pawrly-core/src/: activity.rs  cache.rs  error.rs  format.rs  function.rs  home.rs  lib.rs  model.rs  optimizer.rs  safety.rs  schema.rs  semantic.rs  service.rs  source.rs  storage.rs  test_support.rs  variables.rs
crates/pawrly-engine/: Cargo.toml
crates/pawrly-engine/src/: activity.rs  cache.rs  duckdb_pool.rs  duckdb_source.rs  durable_activity.rs  json_udf.rs  lib.rs  local.rs  namespace.rs  optimizer.rs  preagg.rs  redact.rs  registry.rs  stream.rs  system_table.rs  system_variables.rs
crates/pawrly-engine/src/cache/: refresher.rs
crates/pawrly-engine/src/functions/: file.rs  mod.rs  rewrite.rs  udtf.rs
crates/pawrly-engine/tests/: activity_table.rs  add_source_validation.rs  cache_ttl.rs  dynamic_filter.rs  dynamic_variables.rs  file_source.rs  functions_file.rs  functions_http.rs  functions_integration.rs  functions_mcp.rs  functions_tpch.rs  lakehouse_dispatch.rs  materialize.rs  namespace_catalog.rs  query_handle.rs  semantic_query.rs
crates/pawrly-flight/: Cargo.toml
crates/pawrly-flight/src/: lib.rs
crates/pawrly-lib/: Cargo.toml
crates/pawrly-lib/src/: lib.rs
crates/pawrly-mcp/: Cargo.toml
crates/pawrly-mcp/src/: cancel.rs  dispatch.rs  http.rs  lib.rs  stdio.rs  tools.rs
crates/pawrly-proto/: Cargo.toml  build.rs
crates/pawrly-proto/proto/pawrly/v1/: admin.proto  cache.proto  catalog.proto  common.proto  query.proto  semantic.proto  sources.proto
crates/pawrly-proto/src/: arrow_helpers.rs  conv.rs  lib.rs  propagation.rs
crates/pawrly-schema/: Cargo.toml
crates/pawrly-schema/src/: lib.rs
crates/pawrly-secrets/: Cargo.toml
crates/pawrly-secrets/src/: env.rs  file.rs  keyring.rs  layered.rs  lib.rs
crates/pawrly-secrets/src/variables/: discovery.rs  mod.rs  setup.rs  tokens.rs
crates/pawrly-secrets/tests/: live_discovery.rs
crates/pawrly-semantic/: Cargo.toml
crates/pawrly-semantic/src/: lib.rs  metric.rs  rollup.rs
crates/pawrly-server/: Cargo.toml
crates/pawrly-server/src/: auth.rs  error.rs  lib.rs  openapi.yaml  rest.rs
crates/pawrly-server/src/services/: admin.rs  cache.rs  catalog.rs  mod.rs  query.rs  semantic.rs  sources.rs
crates/pawrly-server/tests/: in_process_round_trip.rs
crates/pawrly-sources/ai/: Cargo.toml
crates/pawrly-sources/ai/src/: lib.rs  models_table.rs  register.rs  udf.rs
crates/pawrly-sources/ai/tests/: openai_compatible.rs
crates/pawrly-sources/duckdb/: Cargo.toml
crates/pawrly-sources/duckdb/src/: file.rs  lib.rs  sqlite.rs
crates/pawrly-sources/duckdb/tests/: file_source.rs  sqlite_source.rs
crates/pawrly-sources/http/: Cargo.toml
crates/pawrly-sources/http/src/: bundled.rs  deferred.rs  dependent_join.rs  expr.rs  fetch.rs  function.rs  guard.rs  lib.rs  openapi.rs  paginate.rs  raw.rs  register.rs  source.rs  typed.rs
crates/pawrly-sources/http/tests/: auth.rs  bundled_sources.rs  computed_and_raw.rs  dependent_join.rs  dynamic_vars.rs  generic_typed.rs  github_typed.rs  heavier.rs  openapi.rs  pagination.rs  request_side.rs  response_shaping.rs  retry.rs  ssrf_guard.rs
crates/pawrly-sources/mcp/: Cargo.toml
crates/pawrly-sources/mcp/src/: error.rs  function.rs  http.rs  lib.rs  provider.rs  register.rs  session.rs  stdio.rs  synth.rs  transport.rs
crates/pawrly-sources/mcp/tests/: mcp.rs
crates/pawrly-telemetry/: Cargo.toml
crates/pawrly-telemetry/src/: lib.rs  metrics.rs  otel.rs
docs/: README.md  api.md  architecture.md  cli.md  clients.md  config.md  console.md  functions.md  materialize.md  mcp.md  observability.md  overview.md  semantic.md  sources.md  variables.md
examples/: file-source.yaml  functions.yaml  mcp.yaml  observability.yaml  openapi.yaml  pawrly.yaml
examples/cache-http/: pawrly.yaml
examples/graphql/: pawrly.yaml
examples/http-storage/: pawrly.yaml
examples/materialize/: pawrly.yaml  sales.csv
examples/mcp/: github.yaml  linear.yaml  pawrly.yaml
schemas/: pawrly.schema.json
scripts/: check-pr-policy.sh  install.ps1  install.sh  perf.py  preflight-destructive-git.sh  release.sh
xtask/: Cargo.toml
xtask/src/: main.rs
(+202 files in other folders)
