[package]
name = "pawrly-cli"
description = "Pawrly command-line binary."
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "pawrly"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
pawrly-core = { workspace = true, features = ["test-support"] }
pawrly-config = { workspace = true }
pawrly-secrets = { workspace = true }
pawrly-engine = { workspace = true }
pawrly-server = { workspace = true }
pawrly-client = { workspace = true }
pawrly-mcp = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-cast = "58"
comfy-table = "7"
futures = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = { workspace = true }
