[package]
name = "pawrly-client"
description = "Remote gRPC client implementation of EngineService."
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
pawrly-core = { workspace = true }
pawrly-proto = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
async-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hyper-util = { workspace = true, features = ["tokio"] }
http = "1"
prost = { workspace = true }
prost-types = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pawrly-core = { workspace = true, features = ["test-support"] }
