[package]
name = "pawrly-config"
description = "YAML config loading, validation, and secret interpolation for Pawrly."
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
pawrly-core = { workspace = true }
pawrly-secrets = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
schemars = { workspace = true }
glob = { workspace = true }
url = { workspace = true }
humantime-serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
secrecy = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pawrly-core = { workspace = true, features = ["test-support"] }
tokio = { workspace = true }
futures = { workspace = true }
