[package]
name = "pawrly-core"
description = "Core types, errors, and the EngineService trait for Pawrly."
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[features]
default = []
test-support = ["dep:tokio", "dep:async-stream"]

[dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
async-trait = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
humantime-serde = { workspace = true }
parking_lot = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true, optional = true }
async-stream = { workspace = true, optional = true }

[dev-dependencies]
pawrly-core = { path = ".", version = "0.0.1", features = ["test-support"] }
tokio = { workspace = true }
futures = { workspace = true }
serde_yaml = { workspace = true }
