[package]
name = "pawrly"
description = "Public Rust library facade for Pawrly. Re-exports the EngineService trait, LocalEngine, and RemoteEngineClient."
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
pawrly-core = { workspace = true }
