[package]
name = "pawrly-proto"
description = "Protobuf contract and tonic-generated bindings for Pawrly."
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
pawrly-core = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-ipc = { workspace = true }
arrow-cast = { workspace = true }
bytes = "1"
thiserror = { workspace = true }
chrono = { workspace = true }
opentelemetry = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
prost = { workspace = true }
