[package]
name = "pawrly-schema"
description = "JSON-Schema → pawrly column/param types and rows-path classifier, shared by source backends."
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
serde_json = { workspace = true }
