[package]
name = "pawrly-secrets"
description = "Secret backends (env, file, OS keyring) for Pawrly."
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
pawrly-core = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
keyring = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
# Dynamic-variable runtime (OAuth minting + setup flows), folded in from the
# former `pawrly-variables` crate.
async-trait = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
chacha20poly1305 = { workspace = true }
url = { workspace = true }

# Real OS keyring backends, selected per platform. Without one of these features
# keyring v3 silently uses an in-memory mock that drops values across processes
# (so connected OAuth tokens never persist). The base `keyring` dep above keeps
# the crate present everywhere; these add the platform store where one exists.
# Hosts with no usable keyring (headless Linux without secret-service, etc.) fall
# back to the encrypted file — or force it with `PAWRLY_NO_KEYRING=1`.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
keyring = { workspace = true, features = ["sync-secret-service", "crypto-rust"] }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }
