[package]
name = "pawrly-semantic"
description = "Semantic-layer compiler: turns a SemanticQuery into executable SQL."
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
pawrly-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
