[package]
name = "pawrly-server"
description = "Tonic gRPC server wrapping any EngineService implementation."
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
pawrly-core = { workspace = true }
pawrly-proto = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
async-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hyper-util = { workspace = true, features = ["tokio"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pawrly-core = { workspace = true, features = ["test-support"] }
pawrly-client = { workspace = true }
prost = { workspace = true }
tempfile = { workspace = true }
rcgen = "0.13"
