[package]
name = "pawrly-telemetry"
description = "Pawrly observability: a lightweight metrics facade plus OpenTelemetry pipeline initialization."
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[features]
# `otel` carries the heavy SDK + exporters and the `init` entry point. Emit-side
# crates depend on this crate with `default-features = false` for the metrics
# facade alone (which needs only the `opentelemetry` API).
default = ["otel"]
otel = [
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-appender-tracing",
    "dep:opentelemetry-semantic-conventions",
    "dep:opentelemetry-prometheus",
    "dep:prometheus",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
    "dep:axum",
    "dep:tokio",
]

[dependencies]
opentelemetry = { workspace = true }
tracing = { workspace = true }
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.32.0", features = ["grpc-tonic", "http-proto", "reqwest-client"], optional = true }
opentelemetry-appender-tracing = { version = "0.32.0", optional = true }
opentelemetry-semantic-conventions = { version = "0.32.0", optional = true }
opentelemetry-prometheus = { version = "0.32.0", optional = true }
prometheus = { version = "0.14.0", optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["json"], optional = true }
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
