[package]
name = "pawrly-sources-duckdb"
description = "DuckDB-backed (and DataFusion-backed) sources for Pawrly: file, postgres, mysql, sqlite, snowflake, iceberg, delta, object stores."
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
pawrly-core = { workspace = true }
datafusion = { workspace = true }
async-trait = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
glob = "0.3"
rusqlite = { version = "0.33", features = ["bundled"] }
parking_lot = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
